# abaco

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .env.example  Cargo.toml
apps/api/src/: main.rs
apps/api/src/application/commands/: mod.rs
apps/api/src/application/ports/: mod.rs
apps/api/src/application/queries/: mod.rs
apps/api/src/domain/entities/: account.rs  journal_entry.rs  mod.rs
apps/api/src/domain/repositories/: mod.rs
apps/api/src/domain/services/: accounting.rs  mod.rs
apps/api/src/domain/value_objects/: account_code.rs  account_type.rs  mod.rs
apps/api/src/infrastructure/config/: mod.rs
apps/api/src/infrastructure/persistence/: mod.rs
apps/api/src/presentation/http/: router.rs
apps/api/src/presentation/middleware/: mod.rs
apps/web/: package.json  vite.config.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: api.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
deploy/: abaco-api.service  abaco-web.service  nginx.conf
